fix Header (customize scrollbar when add more content, add styte overlay for scrollbar body,fix warning Tippy)

--- a/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -3,11 +3,16 @@
    --search-top-spacer: 9px;
    --search-height: 46px;
    --search--button-width: 52px;
+   top: 0;
+   left: 0;
+   z-index: 10;
    width: 100%;
-   height: var(--default-layout-header-height, 60px);
-   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
    display: flex;
+   position: fixed;
    justify-content: center;
+   background-color: var(--white);
+   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+   height: var(--default-layout-header-height, 60px);
 }
 .inner {
    height: 100%;
