--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -7,6 +7,10 @@
 .menu-popper {
    padding-bottom: 8px;
 }
+.menu-body {
+   width: 100%;
+   overflow-y: overlay;
+}
 .menu-item {
    width: 100%;
    justify-content: flex-start;
@@ -24,6 +28,7 @@
 // Header
 .header {
    position: relative;
+   flex-shrink: 0;
    height: 50px;
    margin-top: -8px;
 }
