--- a/src/components/Popper/popper.module.scss
+++ b/src/components/Popper/popper.module.scss
@@ -1,6 +1,8 @@
 .wrapper {
    width: 100%;
-   // max-height: min((100vh - 96px) - 60px, 734px);
+   max-height: min(100vh - 96px - 60px, 734px);
+   display: flex;
+   flex-direction: column;
    min-height: 100px;
    border-radius: 8px;
    background: rgb(255, 255, 255);
